# sarpfiles

./: .~lock.Conclusions on tests.odt#  .~lock.P2tests.ods#  .~lock.TestControl.ods#  .~lock.auxsheet.ods#  .~lock.bundle aux sheet.ods#  .~lock.bundleArcs.csv#  .~lock.comparingResultsVRPsolver.ods#  .~lock.csarpfipmultiresults.csv#  .~lock.csarpfipsingleresults.csv#  .~lock.csarppartialbundlresults.csv#  .~lock.cutvaluessfsarpS.csv#  .~lock.debugfip.ods#  .~lock.ghsarpfipmultiresults.csv#  .~lock.infeasibleinstances.ods#  .~lock.resultsp1.ods#  .~lock.resultsp1bundle.ods#  .~lock.resultsp1node.ods#  .~lock.sarpparameters.odt#  .~lock.test inst.ods#  .~lock.trackresults.ods#  1Acsarp3.txt  2mmmcsarp3.txt  2mmsghsarp.txt  55txtdata.txt  60txtdata.txt  90txtdata.txt  InstancesMsfsarp.txt  Mbdlsfsarp.txt  Mfipcsarp.txt  Msfscale.txt  P2tests.ods  Resbapscspcsarp.csv  SARP.lp  SARP2.lp  Scscale1.txt  SghsarpKbdlN.txt  Sghscale.txt  Sghscale2.txt  Ssfscale.txt  Ssfscale2.txt  (+522 more)
VRPSRead/sharearidec-main/: CMakeLists.txt  README.md
VRPSRead/sharearidec-main/config/: CVRPapp.cfg  CVRPbc.cfg  MultiArcApp.cfg  MultiArcBc.cfg  bcHeur.cfg  testFlowApp.cfg  testFlowBc.cfg
VRPSRead/sharearidec-main/config/tests/: FiveRowsCovCutsBc.cfg  FiveRowsPackCutsApp.cfg  FiveRowsPackCutsBc.cfg  HeurWithFlowModelApp.cfg  HeurWithPedroModelBc.cfg  StandardBc.cfg  WithTwoPathCutsApp.cfg  WoFullDelNodesApp.cfg  WoFullDelNodesBc.cfg
VRPSRead/sharearidec-main/data/csarp/: sarp-7-5-A-4.txt  sarp-7-5-C-4.txt  sarp-7-6-A-2.txt  sarp-8-6-A-4.txt  sarp-8-6-C-2.txt  sarp-8-7-A-1.txt  sarp-8-7-C-2.txt  (+2 more)
VRPSRead/sharearidec-main/include/: sarCutSeparation.h  sarDataC.h  sarModelC.h  sarParameters.h
VRPSRead/sharearidec-main/src/: sarCutSeparation.cpp  sarDataC.cpp  sarMain.cpp  sarModel.cpp  sarParameters.cpp
(+16835 files in other folders)
